Revision history for Perl extension Net::SSLeay.

1.86_10 ????-??-??
	- Use locally-generated certificate chain in local tests rather
	  than the Twitter one, which changes regularly and breaks the
	  test suite unnecessarily. Fixes RT#129201. Thanks to Petr Písař
	  for the report and patch, and Steffen Ullrich for an alternative
	  patch suggestion.

1.86_09 2019-03-12
	- Add missing files to MANIFEST that prevented tests from passing
	  when installing from the 1.86_08 release tarball.

1.86_08 2019-03-12
	- Add and fix functions needed to properly implement client
	  side session reuse for TLS 1.3 with using
	  CTX_sess_set_new_cb. Newly exposed functions:
	  SSL_SESSION_dup and SSL_SESSION_up_ref.
	  Fixed functions: i2d_SSL_SESSION and d2i_SSL_SESSION.
	  Thanks to Steffen Ullrich.
	- Add functions functions to allow reading multiple pems from
	  file and creating untrusted chain: These functions allow you
	  to:
	  - Read in a PEM file with multiple certificates as a
	    STACK_OF(X509_INFO)
	  - Determine the size of the STACK_OF(X509_INFO) and value at
	    an index, which allows you to loop over the stack.
	  - Retrieve the X509 structure from each X509_INFO structure
	    in the stack.
	  Then you can create a new STACK_OF(X509) and push the X509
	  structures onto the new stack. You can then pass this
	  STACK_OF(X509) to X509_STORE_CTX_init which will allow you
	  to add additional untrusted certificates to the chain for
	  verification. Exposed functions are:
	  PEM_X509_INFO_read_bio
	  sk_X509_INFO_num
	  sk_X509_INFO_value
	  sk_X509_INFO_free
	  sk_X509_new_null
	  sk_X509_free
	  sk_X509_push
	  New function implemented by Net::SSLeay:
	  P_X509_INFO_get_x509
	  Thanks to Marc Reisner.
	- Add functions and constants that are necessary to verify a
	  certificate using a hash directory outside of an SSL/TLS
	  connection. Newly exposed functions:
	  X509_STORE_CTX_init
	  X509_STORE_CTX_free
	  X509_STORE_new
	  X509_STORE_free